k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: m2cloud
  labels:
    project: m2cloud
    owner: ynov
